endProcessWithSignal should unblock the signal it's trying to send

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Service Arch
    • Fully Compatible
    • ALL
    • v8.0
    • Service Arch 2024-04-15
    • 4
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When we receive a signal while processing another signal (e.g., we segfault while we're constructing a backtrace in response to an abort), we detect that case and try to end the process using the default handler for the second signal (in this example, segfault). The goal is to avoid deadlock by starting our signal handler logic re-entrantly, which may result in it trying to take the MallocFreeOStream lock recursively.

      However, it can be the case that the signal we're trying to send is blocked. In that case, we will deadlock.

            Assignee:
            Ryan Berryhill
            Reporter:
            Ryan Berryhill
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: