SERVER-89044 Unblock signals before signaling during a nested signal handling situation (#20941)

GitOrigin-RevId: 530a3a6cb427371ec8877cafb129a364cc1ac3fb